--- a/node9.html
+++ b/node9.html
@@ -1057,7 +1057,7 @@ drwxr-xr-x  12 casiano  staff  408  5 feb 18:40 mocha
 </PRE>
 
 <P>
-Una vez instalado Mocha, Creamos la estructura para las pruebas:
+Una vez instalado Mocha, creamos la estructura para las pruebas:
 
 <P>
 <PRE>
