--- a/node7.html
+++ b/node7.html
@@ -154,7 +154,7 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html858"
   HREF="node9.html#SECTION041200190000000000000">Ejecución Simple</A>
 <LI><A NAME="tex2html859"
-  HREF="node9.html#SECTION041200200000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION041200200000000000000">Manejando tareas en JS: Gulp</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html860"
