--- a/node9.html
+++ b/node9.html
@@ -142,13 +142,13 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html950"
   HREF="node9.html#SECTION041200190000000000000">Ejecución Simple</A>
 <LI><A NAME="tex2html951"
-  HREF="node9.html#SECTION041200200000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION041200200000000000000">Manejando tareas en JS: Gulp</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2672"></A>
+   <A NAME="2683"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -343,7 +343,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2677"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2679"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2688"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2690"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -394,25 +394,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2689"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2700"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2691"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2702"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2693"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2704"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2695"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2706"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2697"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2699"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2708"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2710"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -536,7 +536,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2705"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2716"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -594,7 +594,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2711"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2722"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -619,7 +619,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2717"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2728"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -628,7 +628,7 @@ The <A NAME="2717"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2719"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2730"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -639,7 +639,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2721"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2732"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -651,7 +651,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2723"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2734"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -663,7 +663,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html30"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2727"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2738"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -677,7 +677,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2731"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2742"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -780,7 +780,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2743"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2745"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2754"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2756"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1247,7 +1247,7 @@ Chai Assert Style</A>
   
 
 <P>
-The assert style is exposed through assert interface. 
+The <A NAME="2797"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1299,9 +1299,61 @@ $ open tests/index.html
 <P>
 
 <H4><A NAME="SECTION041200200000000000000">
-Pruebas: Véase</A>
+Manejando tareas en JS: Gulp</A>
 </H4>
   
+
+<P>
+Why would you want to use a task runner? 
+Well they’re small applications that automate often time consuming and boring tasks. 
+
+<P>
+If you ever need to do any of the following then a task runner is for you:
+
+<P>
+
+<UL>
+<LI>Minification and concatenation of JavaScript and CSS files
+</LI>
+<LI>CSS Preprocessing
+</LI>
+<LI>Testing 
+</LI>
+</UL>
+By creating a task file you can instruct the task manager to take care of many development tasks and watch for changes in relevant files. All you’ll need to do is start up the task runner and get to work on the more interesting parts of your project.
+
+<P>
+We are going to use <code>gulp</code> as our task manager. To install it:
+
+<P>
+
+<UL>
+<LI>Install gulp globally:
+
+<P>
+<PRE>
+$ npm install --global gulp
+</PRE>
+</LI>
+<LI>Install gulp in your project devDependencies:
+
+<P>
+<PRE>
+$ npm install --save-dev gulp
+\parrafo{Pruebas: Véase}
+</PRE>
+This will install <code>gulp</code> in <code>./node_modules</code> and 
+it will add a line to <code>package.json</code> as the following:
+<PRE>
+  "devDependencies": {
+    "mocha": "latest",
+    "gulp": "~3.8.10"
+  },
+</PRE>
+</LI>
+</UL>
+
+<P>
 
 <UL>
 <LI><A NAME="tex2html45"
