--- a/node9.html
+++ b/node9.html
@@ -150,7 +150,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2692"></A>
+   <A NAME="2696"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -345,7 +345,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2697"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2699"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2701"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2703"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -396,25 +396,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2709"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2713"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2711"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2715"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2713"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2717"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2715"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2719"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2717"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2719"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2721"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2723"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -538,7 +538,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2725"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2729"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -596,7 +596,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2731"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2735"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -621,7 +621,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2737"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2741"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -630,7 +630,7 @@ The <A NAME="2737"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2739"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2743"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -641,7 +641,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2741"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2745"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -653,7 +653,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2743"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2747"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -665,7 +665,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html30"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2747"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2751"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -679,7 +679,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2751"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2755"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -782,7 +782,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2763"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2765"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2767"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2769"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1249,7 +1249,7 @@ Chai Assert Style</A>
   
 
 <P>
-The <A NAME="2806"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
+The <A NAME="2810"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1406,6 +1406,23 @@ $ ls -l temperature.js normalize.css index.html global.css
 -rw-r--r--  1 casiano  staff   749  3 feb 10:40 index.html
 -rw-r--r--  1 casiano  staff  7798 30 ene 22:00 normalize.css
 -rw-r--r--  1 casiano  staff   638  3 feb 15:21 temperature.js
+</PRE>
+Podemos ver la lista de tareas mediante la opción <code>-T</code>:
+<PRE>
+[~/srcPLgrado/temperature(karma)]$ gulp -T
+[22:00:40] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
+[22:00:40] Tasks for ~/local/src/javascript/PLgrado/temperature/gulpfile.js
+[22:00:40] |-- minify
+[22:00:40] `-- clean
+</PRE>
+Podemos borrar las ficheros generados con <code>gulp clean</code>:
+<PRE>
+[~/srcPLgrado/temperature(karma)]$ gulp clean
+[22:00:46] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
+[22:00:46] Starting 'clean'...
+[22:00:46] Finished 'clean' after 7.68 ms
+[~/srcPLgrado/temperature(karma)]$ ls -l minified/
+[~/srcPLgrado/temperature(karma)]$
 </PRE>
 
 <P>
