--- a/node9.html
+++ b/node9.html
@@ -1327,7 +1327,7 @@ If you ever need to do any of the following then a task runner is for you:
 By creating a task file you can instruct the task manager to take care of many development tasks and watch for changes in relevant files. All you’ll need to do is start up the task runner and get to work on the more interesting parts of your project.
 
 <P>
-We are going to use <code>gulp</code> as our task manager. To install it:
+We are going to use <code>gulp</code> as our task manager. To install it you can:
 
 <P>
 
@@ -1339,7 +1339,7 @@ We are going to use <code>gulp</code> as our task manager. To install it:
 $ npm install --global gulp
 </PRE>
 </LI>
-<LI>Install gulp in your project devDependencies:
+<LI>Or you can install gulp in your project devDependencies:
 
 <P>
 <PRE>
