--- a/node9.html
+++ b/node9.html
@@ -1391,6 +1391,7 @@ gulp.task('clean', function(cb) {
 Después de instalar todas las dependencias:
 <PRE>
 $ npm i gulp-util --save-dev
+$ npm i gulp-...  --save-dev
 </PRE>
 podemos ejecutar las tareas:
 <PRE>
