--- a/node9.html
+++ b/node9.html
@@ -1418,7 +1418,7 @@ $ ls -l temperature.js normalize.css index.html global.css
 </PRE>
 Podemos ver la lista de tareas mediante la opción <code>-T</code>:
 <PRE>
-[~/srcPLgrado/temperature(karma)]$ gulp -T
+$ gulp -T
 [22:00:40] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:40] Tasks for ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:40] |-- minify
@@ -1426,12 +1426,12 @@ Podemos ver la lista de tareas mediante la opción <code>-T</code>:
 </PRE>
 Podemos borrar las ficheros generados con <code>gulp clean</code>:
 <PRE>
-[~/srcPLgrado/temperature(karma)]$ gulp clean
+$ gulp clean
 [22:00:46] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:46] Starting 'clean'...
 [22:00:46] Finished 'clean' after 7.68 ms
-[~/srcPLgrado/temperature(karma)]$ ls -l minified/
-[~/srcPLgrado/temperature(karma)]$
+$ ls -l minified/
+$
 </PRE>
 
 <P>
