--- a/node9.html
+++ b/node9.html
@@ -1339,7 +1339,7 @@ We are going to use <code>gulp</code> as our task manager. To install it you can
 $ npm install --global gulp
 </PRE>
 </LI>
-<LI>Or you can install gulp in your project devDependencies:
+<LI>Or you can install gulp in your project <code>devDependencies</code>:
 
 <P>
 <PRE>
@@ -1524,7 +1524,7 @@ el testing framework Mocha y  Chai en el repositorio
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-02-05</I>
+2015-02-06</I>
 </ADDRESS>
 </BODY>
 </HTML>
