--- a/node9.html
+++ b/node9.html
@@ -1392,11 +1392,14 @@ gulp.task('clean', function(cb) {
 <UL>
 <LI><code>gulp.task(name, fn)</code> – registers a function with a name
 </LI>
-<LI><code>gulp.watch(glob, fn)</code> – runs a function when a file that matches the glob changes
-</LI>
 <LI><code>gulp.src(glob)</code> – returns a readable stream
 </LI>
+<LI>The <code>pipe()</code> method takes the source stream derived from the <code>src()</code> 
+method and passes it to the specific plugin being referenced.
+</LI>
 <LI><code>gulp.dest(folder)</code> – returns a writable stream
+</LI>
+<LI><code>gulp.watch(glob, fn)</code> – runs a function when a file that matches the glob changes
 </LI>
 </UL>
 
